--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="row">
         <div class="col-12 logo-up">
           <a href="#" title="Super Shoppy">
-            <img src="images/Logo1.jpg" alt="Super Shoppy" class="w-25">
+            <img src="Logo1.jpg" alt="Super Shoppy" class="w-25">
           </a>
         </div>
 
@@ -104,13 +104,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="images/cloth-stand.jpg" class="d-block w-100" alt="Cloths Stand">
+          <img src="cloth-stand.jpg" class="d-block w-100" alt="Cloths Stand">
         </div>
         <div class="carousel-item">
           <img src="images/plastic-chair.jpg" class="d-block w-100" alt="Chairs">
         </div>
         <div class="carousel-item">
-          <img src="images/plastic-bucket.jpg" class="d-block w-100" alt="Bukets">
+          <img src="plastic-bucket.jpg" class="d-block w-100" alt="Bukets">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -135,7 +135,7 @@
           <div class="col-lg-2 col-md-4 col-6 welcome-image">
             <div class="boxhny13">
               <a href="#">
-                <img src="images/grid1.jpg" class="img-fluid" alt="" />
+                <img src="grid1.jpg" class="img-fluid" alt="" />
                 <div class="boxhny-content">
 
                 </div>
@@ -148,7 +148,7 @@
           <div class="col-lg-2 col-md-4 col-6 welcome-image">
             <div class="boxhny13">
               <a href="#URL">
-                <img src="images/grid2.jpg" class="img-fluid" alt="" />
+                <img src="grid2.jpg" class="img-fluid" alt="" />
                 <div class="boxhny-content">
 
                 </div>
@@ -162,7 +162,7 @@
           <div class="col-lg-2 col-md-4 col-6 welcome-image">
             <div class="boxhny13">
               <a href="#URL">
-                <img src="images/grid3.jpg" class="img-fluid" alt="" />
+                <img src="grid3.jpg" class="img-fluid" alt="" />
                 <div class="boxhny-content">
 
                 </div>
@@ -175,7 +175,7 @@
           <div class="col-lg-2 col-md-4 col-6 welcome-image">
             <div class="boxhny13">
               <a href="#">
-                <img src="images/grid4.jpg" class="img-fluid" alt="" />
+                <img src="grid4.jpg" class="img-fluid" alt="" />
                 <div class="boxhny-content">
 
                 </div>
@@ -187,7 +187,7 @@
           <div class="col-lg-2 col-md-4 col-6 welcome-image">
             <div class="boxhny13">
               <a href="#">
-                <img src="images/grid5.jpg" class="img-fluid" alt="" />
+                <img src="grid5.jpg" class="img-fluid" alt="" />
                 <div class="boxhny-content">
 
                 </div>
@@ -201,7 +201,7 @@
           <div class="col-lg-2 col-md-4 col-6 welcome-image">
             <div class="boxhny13">
               <a href="#URL">
-                <img src="images/grid6.jpg" class="img-fluid" alt="" />
+                <img src="grid6.jpg" class="img-fluid" alt="" />
                 <div class="boxhny-content">
 
                 </div>
@@ -219,14 +219,14 @@
   </section>
   <section>
     <div class="card" style="width: 100%;">
-      <img src="images/1.jpg" class="card-img-top" alt="...">
+      <img src="1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
           content.</p>
       </div>
     </div>
     <div class="card" style="width: 100%;">
-      <img src="images/banner4.jpg" class="card-img-top" alt="...">
+      <img src="banner4.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, a itaque.
           Assumenda laboriosam nisi consequuntur sequi magnam debitis illo ut, ipsa asperiores natus quam veritatis
@@ -234,7 +234,7 @@
       </div>
     </div>
     <div class="card" style="width: 100%;">
-      <img src="images/bg3.jpg" class="card-img-top" alt="...">
+      <img src="bg3.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
           content.</p>
