--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <img src="cloth-stand.jpg" class="d-block w-100" alt="Cloths Stand">
         </div>
         <div class="carousel-item">
-          <img src="images/plastic-chair.jpg" class="d-block w-100" alt="Chairs">
+          <img src="plastic-chair.jpg" class="d-block w-100" alt="Chairs">
         </div>
         <div class="carousel-item">
           <img src="plastic-bucket.jpg" class="d-block w-100" alt="Bukets">
